--- a/src/pages/page2/index.html
+++ b/src/pages/page2/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Webpack TypeScript App</title>
+  <title>lsy-test-page2</title>
 </head>
 <body>
-  page2
+  page2 helloworld
   <div id="app"></div>
 </body>
 </html>
