--- a/src/pages/dev-raising-lovee/index.html
+++ b/src/pages/dev-raising-lovee/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>raising-lovee</title>
+  <title>dev-raising-lovee</title>
 </head>
 <body>
-  page2 helloworld
+  dev-raising-lovee
   <div id="app"></div>
 </body>
 </html>
