--- a/src/pages/lsy-test/index.html
+++ b/src/pages/lsy-test/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Webpack TypeScript App</title>
+  <title>dev-raising-lovee</title>
 </head>
 <body>
-  page1
+  dev-raising-lovee
   <div id="app"></div>
 </body>
 </html>
