--- a/src/pages/lsy-test/index.html
+++ b/src/pages/lsy-test/index.html
@@ -1,13 +1,11 @@
-<!-- src/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dev-raising-lovee</title>
+  <title>lsy-test</title>
 </head>
 <body>
-  dev-raising-lovee
   <div id="app"></div>
 </body>
 </html>
